# gecko-alpha

./: .env.example  .gitattributes  .gitignore  .ssh_out.txt  .ssh_out2.txt  CLAUDE.md  Dockerfile  LOOPS.md  README.md  _check_trending.py  _rca2.py  _report.py  backlog.md  channels.yml.example  docker-compose.yml  pyproject.toml  start.sh
.claude/: mcp.md  settings.json
cron/: README.md  deploy.sh  gecko-alpha.crontab
dashboard/: __init__.py  api.py  db.py  health_status.py  main.py  models.py  search.py  signal_trust_registry.py
docs/: alert_registry.md  dist_build_guardrail.md  gecko-alpha-alignment.md  gecko-alpha_PRD_and_CC_Prompt.docx  hermes_deployed_surface_2026_05_23.md  live-mode-setup.md  migration_versions.md  offshore_handoff_live_trading_2026_06_21.md  runbook_backup_rotation.md  runbook_deploy3_2026_07.md  runbook_deploy_ga_fixes_2026_07_02.md  runbook_gainers_early_revival.md  runbook_high_peak_fade.md  runbook_slow_burn_phase_b.md  runbook_x_perf_accrual_activation.md  zombie-trade-audit.md
investigation/: DECISION_MEMO.md  FINDINGS.md  case_replay.py  ledger_backfill.py  replay_table.md  revival_evidence_queries.sh  ruling_response_queries.sh  time_death_counterfactual.py  vps_query_pack.sh
scout/: __init__.py  aggregator.py  alerter.py  backtest.py  cg_api.py  config.py  config_alert.py  db.py  exceptions.py  gate.py  heartbeat.py  main.py  models.py  outcome_ledger.py  price_sources.py  ratelimit.py  safety.py  scorer.py  timeutil.py  token_ids.py  version.py
scripts/: acceleration-heartbeat-watchdog.sh  alert-channel-watchdog.sh  alert_channel_watchdog.py  analyze_profit_patterns.py  audit_clean_price_path.py  audit_focus_freshness_tradability.py  audit_liquidity_coverage.py  audit_missed_gainers.py  audit_peak_giveback_freshness.py  audit_price_path_coverage.py  audit_signal_early_usefulness.py  audit_social_mentions_denominator.py  audit_stop_loss_false_negatives.sh  backfill_dexscreener_liquidity.py  backfill_gainers_comparisons.py  backfill_ledger_eviction_markers.py  backfill_minara_alert_emissions.py  backtest_conviction_lock.py  backtest_high_peak_existing_data_battery.py  backtest_paper_gainers_min_mcap.py  (+61 more)
(+1066 files in other folders)
