[project]
name = "gecko-alpha"
version = "0.1.0"
description = "CoinGecko early pump detection pipeline with MiroFish narrative simulation"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10,<4",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "anthropic>=0.40,<1",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    # BL-064: Telegram MTProto user-session listener.
    # Telethon was archived 2026-02 (moved to Codeberg). Pinned and version-frozen
    # per CLAUDE.md note — do NOT auto-bump in dependabot PRs.
    "telethon>=1.36,<1.40",
    # BL-064: channels.yml source-of-truth parser.
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-timeout>=2.3,<3",
    "aioresponses>=0.7,<1",
    "pytest-mock>=3.12,<4",
    "httpx>=0.27,<1",
    "freezegun>=1.5,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scout", "dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
